    ORCL_INSERT_DBPANEL

PLCButtonPanel.cs
    dynactrl()
        if (PLCShowSearchButtons)       - moved above PLCCustomButtons

    SearchButton_Click
        - events => PascalCase
        - variable => camelCase
        - reduced FindControl usage
        - added before and after
    
    ClearButton_Click
        - events => PascalCase
        - variable => camelCase
        - reduced FindControl usage
        - added "Select criteria then click 'Search' button."
        - added before and after
        - clears saved session criteria after click

    ShowAlert
        - changed alert to Alert to apply Utility.js Alert function

PLC_SessionVars.cs
    DefaultLocalizedTextValue
        {"AnalystSearch_PageTitle", "Analyst Search"},

ButtonPanelHelper
    changed to => PLCControlHelper.cs

PLCDBPanel.cs
    SearchFilterSQL()
        added tablealias optional parameter
        added a condition that checks if table alias is existing then fall back to tableName if there in none

AnalystSearch.aspx
    - removed PLCSessionVars1

-- 
PLCButtonPanel.cs
    - removed extra line space on top of // Search

    SearchButton_Click
        - put before and after inside if grid and panel is linked
        - updated missed variable with PascalCase format to camelCase format

        - made use of GetPanelFieldValues

    ClearButton_Click
        - put before and after inside if grid and panel is linked

        - changed session clear to only clear linked DBPanel instead of whole session
    
PLCControlHelper.cs
    - removed IsLASD properrty

PLCDBPanel.cs
    GetPanelFieldValues()
        - gets panel field values
    SetPanelFieldValues()
        - sets panel field values
AnalystSearch.aspx
    RestoreSearchCriteria()
        - made use of SetPanelFieldValues() function from DBPanel

--
PLCDBPanel.cs
    - changed param name to fieldValues

PLCButtonPanel.cs
    - trigger SEARCH BEFORE and CLEAR BEFORE events even if no linked DBPanel and DBGrid
    - 